chore: removed JBang tags